--- a/package.json
+++ b/package.json
@@ -9,22 +9,27 @@
     "start": "vue-cli-service serve"
   },
   "dependencies": {
-    "axios": "^0.19.0",
-    "core-js": "^2.6.5",
-    "vee-validate": "^3.0.6",
-    "vue": "^2.6.10",
-    "vue-router": "^3.1.3",
     "@vue/cli-plugin-babel": "^3.11.0",
     "@vue/cli-plugin-eslint": "^3.11.0",
     "@vue/cli-service": "^3.11.0",
-    "vue-template-compiler": "^2.6.10"
+    "axios": "^0.19.0",
+    "core-js": "^2.6.5",
+    "moment": "^2.24.0",
+    "vee-validate": "^3.0.6",
+    "vue": "^2.6.10",
+    "vue-router": "^3.1.3",
+    "vue-template-compiler": "^2.6.10",
+    "vuetify": "^2.0.19"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "node-sass": "^4.12.0",
-    "sass-loader": "^8.0.0"
+    "sass": "^1.17.4",
+    "sass-loader": "^7.0.0",
+    "vue-cli-plugin-vuetify": "^0.6.3",
+    "vuetify-loader": "^1.2.2"
   },
   "eslintConfig": {
     "root": true,
